New in version 1.4.3 (XXX 2014)
 * Minor cleanup of windows *.bat file, build and config files.
 * Fix the link-grammar-server.sh file so that it works.
 * Fix the opencog-server.sh file so that the port number can be set.
 * Disable frames by default: it make everything slowww!
 * Add a plain-text server, for demoing relex live on the web.

New in version 1.4.2 (24 October 2013)
 * Updated maven pom file, from Krzysztof Wezowski.
 * Remove obsolete parser version, which didn't build any more.
 * Fix/remove assorted deprecated functions.
 * Print binary relations separated from unary attributes.
 * Fix "I want you to eat cake", from Rodas Solomon.
 * OWL updates from Lucky--

New in version 1.4.1 (15 October 2012)
 * Fix POS tagging for conjunctions.
 * NLGen output view from Blake Lemoine
 * html view from James White
 * Various fixes to the Frame rules & code, from Joel Pitt

New in version 1.4.0 (21 February 2011)
 * Fix conjunctions to work with current versions of link-grammar.
 * Fix anaphora printing for entities.
 * Fix build to look for OpenNLP-1.4 if OpenNLP-1.5 not found.

New in version 1.3.1 (15 January 2011)
 * Work around JWNL bug 3006600 for infinite loop -- 
   https://sourceforge.net/tracker/?func=detail&aid=3006600&group_id=33824&atid=409470
 * Add .n-f and .n-m linkgrammar gender tag recognition
 * Fix: anaphora resolution failure due to bad head-word identification.
 * Fix: missing frame concept error.
 * Fix: Add /usr/lib/jni to the library search path.
 * Add support for OpenNLP-1.5: launchpad bug 667949
   https://bugs.launchpad.net/relex/+bug/667949

New in version 1.3.0 (15 May 2010)
 * New date relationships for date tagging.
 * Fix: use of quantity in money expressions.
 * Downcase all flag names, so as to offer a more consistent usage.
 * Major restructuring of the entity maintainer interfaces 
   (this bumps version number)
 * Fix certain morphology handlers e.g.'d->would or 'd->had 