@@ -4,6 +4,7 @@ New in version 1.4.3 (XXX 2014)
  * Fix the opencog-server.sh file so that the port number can be set.
  * Disable frames by default: it make everything slowww!
  * Add a plain-text server, for demoing relex live on the web.
+ * Remove the obsolete OpenCogXML* output classes.
 
 New in version 1.4.2 (24 October 2013)
  * Updated maven pom file, from Krzysztof Wezowski.
